# eldritch-chorror

./: .gitignore  Cargo.toml  README.md  common  docker-compose.yml  extra  main.py  rare  uncommon
chores/: common  rare  uncommon
client/: Dockerfile  package.json
client/src/: main.tsx  table.tsx
rust/: Cargo.toml  Dockerfile  notes.md
rust/chores/: spicy
rust/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
src/: main.rs
