[package]
name = "rust"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "choretle"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
mysql = "22.1.0"
tokio = {version = "1", features = ["full"]}
serenity = "0.10"
rand = "0.8"
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
